modified override.styl to try to fix flicker problem on estimate updated estimates-index directive according to Angular's code guide modified meraki-product-form to take into account only the new fields fixed problem with spinner on estimates-product-form template removed attribute check on meraki-products create method

--- a/client/css/override.styl
+++ b/client/css/override.styl
@@ -27,6 +27,14 @@ $darkerRed  = #920303
 $grey       = #E8E8E8
 
 // ------------
+// Angular Animation
+// ------------
+
+.ng-leave
+.ng-leave-active
+  display: none
+
+// ------------
 // Label Clases
 // ------------
 
